@@ -528,7 +528,8 @@ sub _eval_subschema ($self, $data, $schema, $state) {
 
   if ($valid) {
     push $state->{annotations}->@*, @new_annotations;
-    annotate_self(+{ %$state, keyword => $_ }, $schema) foreach sort keys %unknown_keywords;
+    annotate_self(+{ %$state, keyword => $_, unknown => 1 }, $schema)
+      foreach sort keys %unknown_keywords;
   }
 
   return $valid;
