@@ -6,6 +6,8 @@ Revision history for JSON-Schema-Modern
           - optional support for contentEncoding, contentMediaType and
             contentSchema with the validate_content_schemas option and
             "encoding", "media_type" handler registries
+          - a boolean flag "unknown" has been added to Annotation objects to
+            indicate they correspond to an unknown keyword in the schema
 
 0.525     2021-11-17 05:35:24Z
           - minimum Perl version raised to 5.20
